<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tugalsan</groupId>
    <artifactId>com.tugalsan.api.gui.gl.module</artifactId>
    <version>1.0-SNAPSHOT</version>
    <dependencies>
        <dependency>
            <groupId>org.gwtproject</groupId>
            <artifactId>gwt-user</artifactId><!--gwt-user ver2022.07.05 -->
            <exclusions>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>jsinterop-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.validation</groupId>
                    <artifactId>validation-api</artifactId>
                </exclusion>                
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>javax.servlet-api</artifactId>
                </exclusion>                
                <exclusion>
                    <groupId>org.w3c.css</groupId>
                    <artifactId>sac</artifactId>
                </exclusion>   
            </exclusions>
            <version>2.10.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.jsinterop/base -->
        <dependency>
            <groupId>com.google.jsinterop</groupId>
            <artifactId>base</artifactId>
            <version>1.0.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.goharsha</groupId>
            <artifactId>webgl4j</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-servlet</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>base</artifactId>                
                </exclusion>
            </exclusions>
            <version>0.2.9</version>
        </dependency>
        <dependency>
            <groupId>org.joml</groupId>
            <artifactId>joml-gwt</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>base</artifactId>                
                </exclusion>
            </exclusions>
            <version>1.9.20</version><!-- 1.9.20 working, dont update to 1.10.1  -->
        </dependency>
        <dependency>
            <groupId>org.treblereel.gwt</groupId>
            <artifactId>three4g</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>base</artifactId>                
                </exclusion>
                <exclusion>
                    <groupId>org.treblereel.gwt</groupId>
                    <artifactId>three4g-annotations</artifactId>                
                </exclusion>
                <exclusion>
                    <groupId>org.treblereel.gwt</groupId>
                    <artifactId>three4g-processor</artifactId>                
                </exclusion>
            </exclusions>
            <version>0.108</version>
        </dependency>
        <dependency>
            <groupId>org.treblereel.gwt</groupId>
            <artifactId>three4g-extensions</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>base</artifactId>                
                </exclusion>
                <exclusion>
                    <groupId>org.treblereel.gwt</groupId>
                    <artifactId>three4g</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.treblereel.gwt</groupId>
                    <artifactId>three4g-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.elemental2</groupId>
                    <artifactId>elemental2-dom</artifactId>                
                </exclusion>
            </exclusions>
            <version>0.108</version>
        </dependency>
        <dependency>
            <groupId>org.treblereel</groupId>
            <artifactId>datgui4g</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.jsinterop</groupId>
                    <artifactId>base</artifactId>                
                </exclusion>
                <exclusion>
                    <groupId>com.google.elemental2</groupId>
                    <artifactId>elemental2-dom</artifactId>                
                </exclusion>
            </exclusions>
            <version>0.7.9.1</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.unsafe</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.log</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.shape</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.list</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.math</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>com.tugalsan.api.cast</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    
    <build>
        <resources> 
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.java</include>
                    <include>**/*.gwt.xml</include>
                    <include>**/*.js</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin><!-- jdeps -recursive -summary - -module-path "lib" - -multi-release 19 try1-1.0-SNAPSHOT.jar -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>19</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
